изменение в классе .banner

--- a/refueling.html
+++ b/refueling.html
@@ -191,6 +191,7 @@
       .banner {
         flex: 1;
         padding-left: 50px;
+        margin-left: 50px;
       }
       .image {
         height: auto;
